--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/pg": "^8.15.5",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@vercel/node": "^5.4.1",
     "@vitejs/plugin-react": "^5.0.4",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
